--- a/css/movie-card.css
+++ b/css/movie-card.css
@@ -7,17 +7,18 @@
 }
 
 .movie-card {
+  position: relative;
   background-color: var(--beige);
   box-shadow: var(--box-shadow);
   border-radius: 10px;
   width: 300px;
-  height: 700px;
+  height: 500px;
 }
 
 .movie-card__poster {
+  margin: 20px 0px;
   display: flex;
   justify-content: center;
-  margin: 20px 0px;
 }
 
 .movie-card__content {
@@ -29,10 +30,26 @@
   font-weight: bolder;
 }
 
-.movie-card__overview {
-  margin: 10px 0px;
-}
-
 .hidden {
   display: none;
+}
+
+.movie-card__overview {
+  color: white;
+  padding: 10px;
+  border-radius: 10px;
+  line-height: 20px;
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(26, 25, 28, 0.95);
+  opacity: 0;
+  transition: all 0.2s ease-in-out;
+}
+
+.movie-card__overview:hover {
+  opacity: 1;
 }
