--- a/css/style.css
+++ b/css/style.css
@@ -33,3 +33,19 @@ img {
   font-size: 32px;
   font-weight: 1000;
 }
+.moveTop {
+  visibility: hidden;
+  position: fixed;
+  bottom: 1rem;
+  right: 1rem;
+  width: 4rem;
+  height: 4rem;
+  background: #000;
+  color: #fff;
+  border: none;
+  outline: none;
+  border-radius: 50%;
+}
+.moveTop:hover {
+  filter: brightness(150%);
+}
