--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
 @import "variables.css";
 @import "movie-card.css";
 @import "search.css";
+@import "topbtn.css";
 
 body {
   font-family: "Nanum Gothic", sans-serif;
@@ -32,20 +33,4 @@ img {
 .title__text {
   font-size: 32px;
   font-weight: 1000;
-}
-.moveTop {
-  visibility: hidden;
-  position: fixed;
-  bottom: 1rem;
-  right: 1rem;
-  width: 4rem;
-  height: 4rem;
-  background: #000;
-  color: #fff;
-  border: none;
-  outline: none;
-  border-radius: 50%;
-}
-.moveTop:hover {
-  filter: brightness(150%);
 }
