--- a/css/detail.css
+++ b/css/detail.css
@@ -15,7 +15,7 @@ header {
     flex-direction: row;
 }
 
-figure {
+.poster {
     width: 500px;
     height: 700px;
     background-color: gold;
@@ -50,7 +50,6 @@ figure {
     width: 1000px;
     height: 600px;
     background-color: blueviolet;
-
     display: flex;
     flex-direction: row;
     align-items: center;
