--- a/css/review.css
+++ b/css/review.css
@@ -20,3 +20,25 @@
   border: none;
   resize: none;
 }
+
+.review__list {
+  background-color: var(--yellow);
+  width: 300px;
+  height: 300px;
+  border-radius: 20px;
+  padding: 20px;
+}
+
+.review__list div {
+  display: flex;
+  justify-content: space-between;
+}
+
+.review__list p {
+  margin: 20px;
+}
+
+.review__list button {
+  display: flex;
+  justify-content: center;
+}
