--- a/css/review.css
+++ b/css/review.css
@@ -1,12 +1,23 @@
-.review__form {
+.review__wrap {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.review__form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   background-color: turquoise;
+  border-radius: 20px;
+  margin: 20px;
+  width: 700px;
+  height: 300px;
 }
 
 .review__info {
-  background-color: gray;
+  margin: 20px;
 }
 
 .review__content {
@@ -15,10 +26,17 @@
 }
 
 .review__textarea {
-  width: 100%;
-  height: 6.25em;
   border: none;
   resize: none;
+  width: 500px;
+  height: 150px;
+}
+
+#review__lists {
+  display: grid;
+  gap: 50px;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  place-items: center;
 }
 
 .review__list {
