--- a/css/detail.css
+++ b/css/detail.css
@@ -2,22 +2,57 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+
 }
 
 header {
-    height: 200px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+
+    height: 100px;
     background-color: chartreuse;
     width: 100%;
+
+
 }
 
-header>div {
-    height: 200px;
-    background-color: red;
+#homeButton {
+    position: absolute;
+    left: 1%;
+    height: 80px;
+    width: 100px;
+
+    text-align: center;
+    font-size: 1.5rem;
+}
+
+.movie-title {
+    height: 100px;
+    background-color: aqua;
+
+
+    font-size: 2.3rem;
+    text-align: center;
+    vertical-align: baseline;
+
+
+    /*작동안해*/
+}
+
+#darkModeToggle {
+    position: absolute;
+    height: 80px;
+
+    right: 1%;
+    top: 1%
 }
 
 .movie-content {
-    margin-left: auto;
-    margin-right: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .movie-content-top {
@@ -27,6 +62,8 @@ header>div {
 
     display: flex;
     flex-direction: row;
+
+    margin-top: 50px;
 }
 
 .poster {
@@ -43,14 +80,6 @@ header>div {
     display: flex;
     flex-direction: column;
     align-items: center;
-}
-
-.movie-title {
-    width: 1000px;
-    height: 200px;
-    background-color: aqua;
-
-    font-size: 3rem;
 }
 
 .movie-tagline {
@@ -87,16 +116,21 @@ header>div {
     height: 100px;
 
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 2fr;
 
     margin: 10px;
     text-align: center;
+    align-items: center;
     /*위아래 가운데로 어케보내냐*/
 
 }
 
 .movie-overview {
-    width: 1600px;
+    width: 1200px;
     height: 500px;
     background-color: yellow;
+
+    font-size: 1.5rem;
+    padding-left: 5%;
+    padding-right: 5%;
 }
