--- a/css/btns.css
+++ b/css/btns.css
@@ -1,6 +1,6 @@
 #homeButton {
-  background-color: red;
-  color: #fff;
+  background-color: var(--green);
+  color: black;
   padding: 10px 20px;
   border-radius: 4px;
 }
@@ -11,8 +11,8 @@ body.dark-mode {
 }
 #darkModeToggle {
   margin-left: 500px;
-  background-color: red;
-  color: #fff;
+  background-color: var(--green);
+  color: black;
   padding: 10px 20px;
   border-radius: 4px;
 }
