--- a/css/detail.css
+++ b/css/detail.css
@@ -1,136 +1,129 @@
-.detail-body {
+/* .detail-body {
     display: flex;
     flex-direction: column;
     align-items: center;
 
-}
+} */
 
 header {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 
-    height: 100px;
-    background-color: chartreuse;
-    width: 100%;
-
-
+  height: 100px;
+  background-color: chartreuse;
+  width: 100%;
 }
 
 #homeButton {
-    position: absolute;
-    left: 1%;
-    height: 80px;
-    width: 100px;
+  position: absolute;
+  left: 1%;
+  height: 80px;
+  width: 100px;
 
-    text-align: center;
-    font-size: 1.5rem;
+  text-align: center;
+  font-size: 1.5rem;
 }
 
 .movie-title {
-    height: 100px;
-    background-color: aqua;
+  height: 100px;
+  background-color: aqua;
 
+  font-size: 2.3rem;
+  text-align: center;
+  vertical-align: baseline;
 
-    font-size: 2.3rem;
-    text-align: center;
-    vertical-align: baseline;
-
-
-    /*작동안해*/
+  /*작동안해*/
 }
 
 #darkModeToggle {
-    position: absolute;
-    height: 80px;
+  position: absolute;
+  height: 80px;
 
-    right: 1%;
-    top: 1%
+  right: 1%;
+  top: 1%;
 }
 
 .movie-content {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .movie-content-top {
-    background-color: wheat;
-    width: 1600px;
-    height: 800px;
+  background-color: wheat;
+  width: 1600px;
+  height: 800px;
 
-    display: flex;
-    flex-direction: row;
+  display: flex;
+  flex-direction: row;
 
-    margin-top: 50px;
+  margin-top: 50px;
 }
 
 .poster {
-    width: 500px;
-    height: 700px;
-    background-color: gold;
+  width: 500px;
+  height: 700px;
+  background-color: gold;
 }
 
 .movie-detail {
-    width: 1100px;
-    height: 700px;
-    background-color: green;
+  width: 1100px;
+  height: 700px;
+  background-color: green;
 
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .movie-tagline {
-    width: 1000px;
-    height: 100px;
-    background-color: aquamarine;
-    font-size: 2rem;
+  width: 1000px;
+  height: 100px;
+  background-color: aquamarine;
+  font-size: 2rem;
 }
 
 .movie-info {
-    width: 1000px;
-    height: 600px;
-    background-color: blueviolet;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
+  width: 1000px;
+  height: 600px;
+  background-color: blueviolet;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
 }
 
 .detail-inner {
-    background-color: black;
-    width: 300px;
-    height: 350px;
+  background-color: black;
+  width: 300px;
+  height: 350px;
 
-
-    list-style: none;
-    padding-left: 0px;
-
+  list-style: none;
+  padding-left: 0px;
 }
 
 .inner-content {
-    background-color: chocolate;
-    width: 280px;
-    height: 100px;
+  background-color: chocolate;
+  width: 280px;
+  height: 100px;
 
-    display: grid;
-    grid-template-columns: 1fr 2fr;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
 
-    margin: 10px;
-    text-align: center;
-    align-items: center;
-    /*위아래 가운데로 어케보내냐*/
-
+  margin: 10px;
+  text-align: center;
+  align-items: center;
+  /*위아래 가운데로 어케보내냐*/
 }
 
 .movie-overview {
-    width: 1200px;
-    height: 500px;
-    background-color: yellow;
+  width: 1200px;
+  height: 500px;
+  background-color: yellow;
 
-    font-size: 1.5rem;
-    padding-left: 5%;
-    padding-right: 5%;
+  font-size: 1.5rem;
+  padding-left: 5%;
+  padding-right: 5%;
 }
