--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
 @import "btns.css";
 @import "topbtn.css";
 @import "detail.css";
+@import "modal.css";
 
 body {
   font-family: "Nanum Gothic", sans-serif;
