--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,6 @@ body {
   background-color: var(--green);
 }
 
-
 footer {
   display: flex;
   justify-content: center;
@@ -37,4 +36,7 @@ footer {
 .title__text {
   font-size: 32px;
   font-weight: 1000;
+}
+.space {
+  height: 100px;
 }
