영화 정렬기능 구현 , 변수명 수정

--- a/css/btns.css
+++ b/css/btns.css
@@ -1,31 +1,8 @@
-#homeButton {
+#home-button {
   background-color: var(--green);
   color: black;
   border-radius: 4px;
-}
 
-body.dark-mode {
-  background-color: #222;
-  color: #fff;
-}
-
-#darkModeToggle {
-  background-color: black;
-  color: white;
-  padding: 10px 20px;
-  border-radius: 4px;
-}
-
-.nexthome {
-  font-weight: 300;
-  font-size: 16px;
-  color: #222;
-  letter-spacing: 0.313em;
-  line-height: 1.5em;
-}
-
-
-#homeButton {
   position: absolute;
   left: 1%;
   height: 80px;
@@ -35,11 +12,28 @@ body.dark-mode {
   font-size: 1.5rem;
 }
 
+body.dark-mode {
+  background-color: #222;
+  color: #fff;
+}
 
-#darkModeToggle {
+#dark-mode-toggle {
+  background-color: black;
+  color: white;
+  padding: 10px 20px;
+  border-radius: 4px;
+
   position: absolute;
   height: 80px;
 
   right: 1%;
   top: 1%
+}
+
+.nexthome {
+  font-weight: 300;
+  font-size: 16px;
+  color: #222;
+  letter-spacing: 0.313em;
+  line-height: 1.5em;
 }
