--- a/css/variables.css
+++ b/css/variables.css
@@ -5,4 +5,8 @@
   --yellow: #fce09b;
   --green: #b5cb99;
   --brown: #e08773f1;
+  --white: #f8f8f8;
+  --grey: #f2f2f2;
+  --dark-grey: #c8c8c8;
+  --red: #f05e32;
 }
