--- a/css/btns.css
+++ b/css/btns.css
@@ -1,9 +1,3 @@
-#homeButton {
-  background-color: var(--green);
-  color: black;
-  border-radius: 4px;
-}
-
 body.dark-mode {
   background-color: #222;
   color: #fff;
@@ -24,22 +18,26 @@ body.dark-mode {
   line-height: 1.5em;
 }
 
-
 #homeButton {
   position: absolute;
   left: 1%;
-  height: 80px;
-  width: 100px;
+  height: 70px;
+  width: 50px;
 
   text-align: center;
   font-size: 1.5rem;
 }
 
-
 #darkModeToggle {
   position: absolute;
-  height: 80px;
-
+  height: 60px;
+  border-radius: 30px;
+  box-shadow: var(--box-shadow);
+  border: none;
   right: 1%;
-  top: 1%
+  top: 3%;
+}
+
+#darkModeToggle:hover {
+  cursor: pointer;
 }
