--- a/css/detail.css
+++ b/css/detail.css
@@ -6,8 +6,8 @@
 
 .movie-content-top {
   /* background-color: wheat; */
-  width: 1600px;
-  height: 800px;
+  width: 100%;
+  height: 750px;
 
   display: flex;
   flex-direction: row;
@@ -16,8 +16,6 @@
 }
 
 .poster {
-  margin-left: 80px;
-
   border: thick double black;
   border-radius: 5px;
 
@@ -26,8 +24,8 @@
 }
 
 .movie-detail {
-  width: 1050px;
-  height: 700px;
+  width: 800px;
+  height: 710px;
   /* background-color: green; */
 
   display: flex;
@@ -48,7 +46,7 @@
 }
 
 .movie-tagline {
-  width: 1000px;
+  width: 600px;
   height: 100px;
   /* background-color: aquamarine; */
 
@@ -58,19 +56,18 @@
 }
 
 .movie-info {
-  width: 1000px;
+  width: 700px;
   height: 400px;
   /* background-color: blueviolet; */
   display: flex;
-  flex-direction: row;
   align-items: center;
   justify-content: center;
 }
 
 .detail-inner {
-  /* background-color: black; */
-  width: 420px;
-  height: 300px;
+  /* background-color: ivory; */
+  width: 350px;
+  height: 350px;
 
   list-style: none;
   padding-left: 0px;
@@ -79,13 +76,13 @@
 }
 
 .inner-content > p {
-  font-size: 1.3rem;
+  font-size: 1.2rem;
 }
 
 .inner-content {
   border: thick double black;
   border-radius: 10px;
-  width: 400px;
+  width: 300px;
   height: 80px;
 
   display: grid;
@@ -98,7 +95,7 @@
 
 .movie-overview {
   width: 1200px;
-  height: 500px;
+  height: 300px;
   /* background-color: yellow; */
 
   border: thick double black;
