--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@
 body {
   font-family: "Nanum Gothic", sans-serif;
   height: 100vh;
-  background-color: var(--green);
+  background-color: var(--grey);
 }
 
 footer {
@@ -28,7 +28,7 @@ footer {
   justify-content: center;
   align-items: center;
   height: 100px;
-  border-bottom: 2px solid red;
+  border-bottom: 2px solid var(--red);
 }
 
 .title__text {
