--- a/css/detail.css
+++ b/css/detail.css
@@ -5,20 +5,17 @@
 }
 
 .movie-content-top {
-  /* background-color: wheat; */
   width: 100%;
   height: 750px;
-
   display: flex;
   flex-direction: row;
   justify-content: center;
-  margin-top: 50px;
+  margin-top: 130px;
 }
 
 .poster {
-  border: thick double black;
-  border-radius: 5px;
-
+  border-radius: 20px;
+  box-shadow: var(--box-shadow);
   width: 500px;
   height: 700px;
 }
@@ -26,8 +23,6 @@
 .movie-detail {
   width: 800px;
   height: 710px;
-  /* background-color: green; */
-
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -35,13 +30,9 @@
 
 .movie-title {
   margin: 50px 0 60px 0;
-
   height: 100px;
-
   font-size: 4rem;
   text-align: center;
-
-  /*작동안해*/
 }
 
 .movie-tagline {
@@ -62,13 +53,10 @@
 }
 
 .detail-inner {
-  /* background-color: ivory; */
   width: 350px;
   height: 350px;
-
   list-style: none;
   padding-left: 0px;
-
   display: grid;
 }
 
@@ -77,14 +65,14 @@
 }
 
 .inner-content {
-  border: thick double black;
-  border-radius: 10px;
+  border-radius: 20px;
+  padding: 10px;
   width: 300px;
   height: 80px;
-
+  background-color: var(--dark-grey);
   display: grid;
   grid-template-columns: 1fr 2fr;
-
+  box-shadow: var(--box-shadow);
   margin: 10px;
   text-align: center;
   align-items: center;
@@ -93,8 +81,7 @@
 .movie-overview {
   width: 1200px;
   height: 300px;
-  /* background-color: yellow; */
-
+  background-color: var(--dark-grey);
   border: thick double black;
 
   border-radius: 10px;
