--- a/css/search.css
+++ b/css/search.css
@@ -1,7 +1,7 @@
 .search {
+  margin-top: 110px;
   display: flex;
-  flex-direction: row;
-  justify-content: center;
+  justify-content: space-between;
   height: 80px;
   font-size: 28px;
 }
@@ -12,6 +12,7 @@
   align-items: center;
   gap: 10px;
   position: relative;
+  margin-left: 300px;
 }
 
 .search-form input {
@@ -29,12 +30,13 @@
 }
 
 .search-form button {
-  width: 50px;
+  width: 80px;
   height: 50px;
   padding: 10px;
   font-size: 15px;
-  font-weight: bold;
-  background-color: var(--yellow);
+  font-weight: 600;
+  color: white;
+  background-color: var(--red);
   border-radius: 20px;
   border: none;
   position: absolute;
@@ -49,6 +51,8 @@
   transform: scale(1.1);
 }
 
+/* 정렬 버튼 */
+
 .sort-btns {
   margin: 20px;
   display: flex;
@@ -57,13 +61,22 @@
   gap: 5px;
 }
 
-.sort-btns>button {
-  background-color: white;
-  border: 4px solid #4CAF50;
+.sort-btns > button {
+  width: 80px;
+  height: 50px;
+  padding: 10px;
+  font-size: 17px;
+  font-weight: 300;
+  color: white;
+  background-color: var(--pink);
+  border-radius: 20px;
+  border: none;
   cursor: pointer;
-  font-size: 1.3rem;
+  box-shadow: var(--box-shadow);
+  transition: all 0.1s ease-in-out;
 }
 
-.sort-btns>button:hover {
-  background-color: #4CAF50;
+.sort-btns > button:hover {
+  filter: brightness(1.1);
+  transform: scale(1.1);
 }
