--- a/css/detail.css
+++ b/css/detail.css
@@ -29,19 +29,23 @@
 }
 
 .movie-title {
-  margin: 50px 0 60px 0;
-  height: 100px;
+  width: 700px;
+  height: 250px;
   font-size: 4rem;
-  text-align: center;
+  font-weight: bolder;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .movie-tagline {
   width: 600px;
-  height: 100px;
-
+  height: 80px;
   font-size: 2rem;
   line-height: 3rem;
   text-align: center;
+  font-weight: 300;
+  color: rgb(0, 0, 0, 0.5);
 }
 
 .movie-info {
@@ -55,9 +59,16 @@
 .detail-inner {
   width: 350px;
   height: 350px;
+  margin-left: 20px;
   list-style: none;
   padding-left: 0px;
   display: grid;
+}
+
+.inner-content :first-child {
+  font-size: 22px;
+  font-weight: bold;
+  margin-left: 15px;
 }
 
 .inner-content > p {
@@ -67,25 +78,28 @@
 .inner-content {
   border-radius: 20px;
   padding: 10px;
-  width: 300px;
+  width: 320px;
   height: 80px;
-  background-color: var(--dark-grey);
-  display: grid;
-  grid-template-columns: 1fr 2fr;
+  background-color: var(--pink);
   box-shadow: var(--box-shadow);
+  color: white;
   margin: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
   text-align: center;
-  align-items: center;
 }
 
 .movie-overview {
   width: 1200px;
-  height: 300px;
+  height: fit-content;
   background-color: var(--dark-grey);
-  border: thick double black;
-
-  border-radius: 10px;
-
-  font-size: 1.5rem;
+  color: white;
+  box-shadow: var(--box-shadow);
+  font-size: 30px;
+  line-height: 40px;
+  border-radius: 20px;
+  font-weight: 200;
+  color: rgb(0, 0, 0, 0.7);
   padding: 50px;
 }
