--- a/css/movie-card.css
+++ b/css/movie-card.css
@@ -34,6 +34,7 @@
 .movie-card-title {
   font-size: 18px;
   font-weight: bolder;
+  margin-bottom: 8px;
 }
 
 .hidden {
@@ -42,9 +43,9 @@
 
 .movie-card-overview {
   color: white;
-  padding: 10px;
+  padding: 15px;
   border-radius: 10px;
-  line-height: 20px;
+  line-height: 25px;
   position: absolute;
   z-index: 1;
   top: 0;
