--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@
 @import "topbtn.css";
 @import "detail.css";
 @import "modal.css";
+@import "credit.css";
 
 body {
   font-family: "Nanum Gothic", sans-serif;
