--- a/css/btns.css
+++ b/css/btns.css
@@ -9,6 +9,11 @@ body.dark-mode {
   padding: 10px 20px;
   border-radius: 4px;
   margin-right: 50px;
+
+  height: 60px;
+  border-radius: 30px;
+  box-shadow: var(--box-shadow);
+  border: none;
 }
 
 .nexthome {
@@ -20,31 +25,6 @@ body.dark-mode {
   margin-top: 30px;
 }
 
-body.dark-mode {
-  background-color: #222;
-  color: #fff;
-}
-
-#dark-mode-toggle {
-  background-color: black;
-  color: white;
-  padding: 10px 20px;
-  border-radius: 4px;
-
-  height: 60px;
-  border-radius: 30px;
-  box-shadow: var(--box-shadow);
-  border: none;
-}
-
-#darkModeToggle:hover {
+#dark-mode-toggle:hover {
   cursor: pointer;
-}
-
-.nexthome {
-  font-weight: 300;
-  font-size: 16px;
-  color: #222;
-  letter-spacing: 0.313em;
-  line-height: 1.5em;
 }
