--- a/css/review.css
+++ b/css/review.css
@@ -107,6 +107,7 @@
 
 .review__list {
   background-color: var(--dark-grey);
+  min-width: 280px;
   width: 280px;
   min-height: 280px;
   height: max-content;
@@ -132,9 +133,6 @@
 
 .review__list p {
   line-height: 30px;
-}
-
-.review__list p {
   margin: 20px;
 }
 
