video api 받아와서 추가

--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@
 @import "detail.css";
 @import "modal.css";
 @import "credit.css";
+@import "video.css";
 
 body {
   font-family: "Nanum Gothic", sans-serif;
